# adventures-in-motion-control

./: .travis.yml  Cargo.toml  README.md  index.html  search-index.js  settings.html  source-files.js
aimc_comms/: all.html  enum.CommsError.html  index.html  sidebar-items.js  struct.Communications.html  struct.Outputs.html  trait.MessageHandler.html  trait.Rx.html  trait.Tx.html
aimc_fps_counter/: all.html  index.html  sidebar-items.js  struct.Clear.html  struct.Fps.html  struct.FpsCounter.html  trait.FpsInputs.html  trait.FpsSink.html
aimc_hal/: all.html  index.html  sidebar-items.js  trait.System.html
aimc_motion/: all.html  enum.ControlMode.html  enum.FaultKind.html  index.html  sidebar-items.js  struct.Fault.html  struct.GcodeProgram.html  struct.Home.html  struct.Motion.html  struct.MotionParameters.html  struct.MoveAxisHome.html  struct.StartHomingSequence.html
aimc_sim/: all.html  fn.__wasm_bindgen_generated_on_module_loaded.html  fn.__wasm_bindgen_generated_poll.html  fn.__wasm_bindgen_generated_setup_world.html  fn.encode_gcode_program.html  fn.on_module_loaded.html  fn.poll.html  fn.setup_world.html  index.html  sidebar-items.js  struct.App.html  struct.B.html  struct.Browser.html  struct.Inputs.html  struct.PerformanceClock.html
anpp/: all.html  index.html  sidebar-items.js  struct.Decoder.html  struct.Packet.html
anpp-ts/: jest.config.js  package.json  tsconfig.json
arraydeque/: all.html  index.html  sidebar-items.js  struct.ArrayDeque.html  struct.CapacityError.html  struct.Drain.html  struct.IntoIter.html  struct.Iter.html  struct.IterMut.html  trait.Array.html  trait.RangeArgument.html
arrayvec/: all.html  index.html  struct.ArrayString.html  struct.ArrayVec.html  struct.CapacityError.html  struct.Drain.html  struct.IntoIter.html  trait.Array.html  trait.RangeArgument.html
bumpalo/: all.html  index.html  macro.format.html  macro.vec.html  sidebar-items.js  struct.Bump.html
byteorder/: enum.BigEndian.html  enum.LittleEndian.html  trait.ByteOrder.html
comms/: Cargo.toml
comms/src/: lib.rs
console_error_panic_hook/: all.html  fn.hook.html  fn.set_once.html  index.html
fps-counter/: Cargo.toml
fps-counter/src/: lib.rs
frontend/: index.html  index.js  package.json  tsconfig.json  vue.config.js
gcode/: all.html  constant.MAX_COMMAND_LEN.html  constant.MAX_COMMENT_LEN.html  enum.Mnemonic.html  fn.parse.html  fn.parse_with_callbacks.html  index.html  sidebar-items.js  struct.Comment.html  struct.GCode.html  struct.Line.html  struct.OwnedComment.html  struct.Span.html  struct.Word.html  trait.Callbacks.html
hal/: Cargo.toml
hal/src/: automation.rs  axes.rs  clock.rs  lib.rs  messaging.rs  system.rs
js_sys/: all.html  fn.decode_uri.html  fn.decode_uri_component.html  fn.encode_uri.html  fn.encode_uri_component.html  fn.escape.html  fn.eval.html  fn.global.html  fn.is_finite.html  fn.parse_float.html  fn.parse_int.html  fn.try_iter.html  fn.unescape.html  index.html  sidebar-items.js  struct.Array.html  struct.ArrayBuffer.html  struct.Boolean.html  struct.DataView.html  struct.Date.html  struct.Error.html  struct.EvalError.html  struct.Float32Array.html  struct.Float64Array.html  struct.Function.html  struct.Generator.html  struct.Int16Array.html  struct.Int32Array.html  struct.Int8Array.html  struct.IntoIter.html  struct.Iter.html  struct.Iterator.html  struct.IteratorNext.html  struct.JsString.html  struct.Map.html  struct.Number.html  struct.Object.html  struct.Promise.html  struct.Proxy.html  struct.RangeError.html  (+14 more)
libm/: all.html  fn.acos.html  fn.acosf.html  fn.asin.html  fn.asinf.html  fn.atan.html  fn.atan2.html  fn.atan2f.html  fn.atanf.html  fn.cbrt.html  fn.cbrtf.html  fn.ceil.html  fn.ceilf.html  fn.cos.html  fn.cosf.html  fn.cosh.html  fn.coshf.html  fn.exp.html  fn.exp2.html  fn.exp2f.html  fn.expf.html  fn.expm1.html  fn.expm1f.html  fn.fabs.html  fn.fabsf.html  fn.fdim.html  fn.fdimf.html  fn.floor.html  fn.floorf.html  fn.fma.html  fn.fmaf.html  fn.fmax.html  fn.fmaxf.html  fn.fmin.html  fn.fminf.html  fn.fmod.html  fn.fmodf.html  fn.hypot.html  fn.hypotf.html  fn.ldexp.html  (+32 more)
motion/: Cargo.toml
motion/src/: gcode.rs  gcode_program.rs  home.rs  lib.rs  motion.rs
motion/src/movements/: mod.rs  point.rs  translator.rs
motion/src/planning/: mod.rs
nodrop/: all.html  index.html  struct.NoDrop.html
num_traits/: all.html  enum.FloatErrorKind.html  fn.clamp.html  index.html  struct.ParseFloatError.html  trait.Num.html  trait.NumAssign.html  trait.NumAssignOps.html  trait.NumAssignRef.html  trait.NumOps.html  trait.NumRef.html  trait.RefNum.html
proc_macro2/: enum.Delimiter.html  enum.Spacing.html  enum.TokenTree.html  struct.Group.html  struct.Ident.html  struct.LexError.html  struct.Literal.html  struct.Punct.html  struct.Span.html  struct.TokenStream.html
quote/: macro.quote.html  trait.IdentFragment.html
scroll/: all.html  constant.BE.html  constant.LE.html  constant.NATIVE.html  constant.NETWORK.html  enum.Endian.html  enum.Error.html  index.html  struct.Sleb128.html  struct.Uleb128.html  trait.Cread.html  trait.Cwrite.html  trait.IOread.html  trait.IOwrite.html  trait.Pread.html  trait.Pwrite.html  type.Result.html
scroll_derive/: all.html  derive.IOread.html  derive.IOwrite.html  derive.Pread.html  derive.Pwrite.html  derive.SizeWith.html  index.html
sim/: Cargo.toml
sim/src/: app.rs  browser.rs  clock.rs  inputs.rs  lib.rs  platform_specific.rs  router.rs  utils.rs
src/: clock.rs  lib.rs  system.rs
syn/: enum.AttrStyle.html  enum.BinOp.html  enum.Data.html  enum.Expr.html  enum.Fields.html  enum.FnArg.html  enum.ForeignItem.html  enum.GenericArgument.html  enum.GenericMethodArgument.html  enum.GenericParam.html  enum.ImplItem.html  enum.Item.html  enum.Lit.html  enum.MacroDelimiter.html  enum.Member.html  enum.Meta.html  enum.NestedMeta.html  enum.Pat.html  enum.PathArguments.html  enum.RangeLimits.html  enum.ReturnType.html  enum.Stmt.html  enum.StrStyle.html  enum.TraitBoundModifier.html  enum.TraitItem.html  enum.Type.html  enum.TypeParamBound.html  enum.UnOp.html  enum.UseTree.html  (+169 more)
(+6457 files in other folders)
