[package]
name = "aimc_fps_counter"
version = "0.1.0"
authors = ["Michael Bryan <michaelfbryan@gmail.com>"]
edition = "2018"
description = "FPS counter system for Adventures in Motion Control"
license = "MIT or Apache-2.0"
repository = "https://github.com/Michael-F-Bryan/adventures-in-motion-control"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aimc_hal = { path = "../hal" }
arraydeque = "0.4"
scroll = "0.10"
scroll_derive = "0.10"
