[package]
name = "aimc-hal"
version = "0.1.0"
authors = ["Michael Bryan <michaelfbryan@gmail.com>"]
edition = "2018"
description = "Hardware Abstraction Layer for Adventures in Motion Control"
license = "MIT or Apache-2.0"
repository = "https://github.com/Michael-F-Bryan/adventures-in-motion-control"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anpp = "1.0.1"
scroll_derive = "0.9.5"
scroll = "0.9.2"
