[package]
name = "aimc_hal"
version = "0.1.0"
authors = ["Michael Bryan <michaelfbryan@gmail.com>"]
edition = "2018"
description = "Hardware Abstraction Layer for Adventures in Motion Control"
license = "MIT or Apache-2.0"
repository = "https://github.com/Michael-F-Bryan/adventures-in-motion-control"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anpp = "2.0"
scroll_derive = "0.10"
scroll = "0.10"
uom = { version = "0.26", features = ["f32", "si"], default_features = false }

[dev-dependencies]
arrayvec = { version = "0.5", default-features = false }
