[package]
name = "aimc_motion"
version = "0.1.0"
authors = ["Michael Bryan <michaelfbryan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aimc_hal = { path = "../hal" }
uom = { version = "0.25.0", features = ["f32", "si"], default_features = false }
arrayvec = "0.4.11"
scroll = "0.9.2"
scroll_derive = "0.9.5"
anpp = "2.0.0"
gcode = "0.5.1"
