[package]
name = "aimc_motion"
version = "0.1.0"
authors = ["Michael Bryan <michaelfbryan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aimc_hal = { path = "../hal" }
uom = { version = "0.26", features = ["f32", "si"], default_features = false }
arrayvec = { version = "0.5", default-features = false }
scroll = "0.10"
scroll_derive = "0.10"
anpp = "2.0.0"
gcode = "0.5"
