[package]
name = "aimc-sim"
version = "0.1.0"
authors = ["Michael Bryan <michaelfbryan@gmail.com>"]
edition = "2018"
description = "WASM frontend for the Adventures in Motion Control simulator"
license = "MIT or Apache-2.0"
repository = "https://github.com/Michael-F-Bryan/adventures-in-motion-control"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"
aimc-hal = { path = "../hal" }
web-sys = { version = "0.3", features = ["Window", "Performance", "console", "Document", "Element"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

fps-counter = { path = "../fps-counter" }
arrayvec = "0.4.11"
comms = { path = "../comms" }
anpp = "1.0.1"
scroll = "0.9.2"
scroll_derive = "0.9.5"
js-sys = "0.3.27"

[dev-dependencies]
wasm-bindgen-test = "0.2"

#[profile.release]
# Tell `rustc` to optimize for small code size.
#opt-level = "s"
