[package]
name = "aimc_sim"
version = "0.1.0"
authors = ["Michael Bryan <michaelfbryan@gmail.com>"]
edition = "2018"
description = "WASM frontend for the Adventures in Motion Control simulator"
license = "MIT or Apache-2.0"
repository = "https://github.com/Michael-F-Bryan/adventures-in-motion-control"
publish = false
readme = "../README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
aimc_hal = { path = "../hal" }
aimc_fps_counter = { path = "../fps-counter" }
aimc_comms = { path = "../comms" }
aimc_motion = { path = "../motion" }

wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Performance", "console", "Document", "Element"] }
console_error_panic_hook = { version = "0.1" }

arrayvec = { version = "0.5", default-features = false }
anpp = "2.0"
scroll = "0.10"
scroll_derive = "0.10"
js-sys = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3"
